--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,7 +4,7 @@
     <script src="https://kit.fontawesome.com/2d2949535e.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AirBnb Clone</title>
+    <title>Airbnb Clone</title>
     <link rel="stylesheet" type="text/css" href="../styles/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet"> 
@@ -49,9 +49,10 @@
             <h1 id="last-child-h1">Near</h1>
             <h5>Explore nearby stays</h5>
         </div>
+    </div>
+
+    <div class="section-2">
         
-
-
     </div>
 </body>
 </html>
