added dropdown function

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -40,7 +40,7 @@
         </div>
 
         <div class="search-glass">
-            <i class="fas fa-search" id="mag-glass"></i>
+            <i class="fas fa-search" id="mag-glass" onclick="function dropdown()"></i>
         </div>
 
 
