added animated textarea on button click

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" type="text/css" href="../styles/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet"> 
+    <script src="../js/app.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body>
     <div class="header-covid"><p>Get the latest on our COVID-19 response</p></div>
@@ -40,7 +42,9 @@
         </div>
 
         <div class="search-glass">
-            <i class="fas fa-search" id="mag-glass" onclick="function dropdown()"></i>
+            <i class="fas fa-search" id="mag-glass" onclick="dropdown()"></i>
+            <label for="w3review"></label>
+            <textarea id="w3review" name="w3review" rows="4" cols="50" ></textarea>
         </div>
 
 
