small modifications to textarea

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -44,7 +44,7 @@
         <div class="search-glass">
             <i class="fas fa-search" id="mag-glass" onclick="dropdown()"></i>
             <label for="w3review"></label>
-            <textarea id="w3review" name="w3review" rows="4" cols="50" ></textarea>
+            <textarea id="w3review" name="w3review" maxlength="20" ></textarea>
         </div>
 
 
