added first row of pictures

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -56,7 +56,36 @@
     </div>
 
     <div class="section-2">
-        
+        <div class="row-first">
+            <div class="row-item">
+                <img src="../img/simplelogo.webp" alt="" srcset="">
+                <div class="row-img-text">
+                    <h4>Sibiu</h4>
+                    <h5>7 hour drive</h5>
+                </div>
+            </div>
+            <div class="row-item">
+                <img src="../img/simplelogo2.webp" alt="" srcset="">
+                <div class="row-img-text">
+                    <h4>Bistrita</h4>
+                    <h5>7 hour drive</h5>
+                </div>
+            </div>
+            <div class="row-item">
+                <img src="../img/simplelogo3.webp" alt="" srcset="">
+                <div class="row-img-text">
+                    <h4>Bucuresti</h4>
+                    <h5>7 hour drive</h5>
+                </div>
+            </div>
+            <div class="row-item">
+                <img src="../img/simplelogo4.webp" alt="" srcset="">
+                <div class="row-img-text">
+                    <h4>Prahova</h4>
+                    <h5>7 hour drive</h5>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
