Organized css file

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -86,6 +86,39 @@
                 </div>
             </div>
         </div>
+        <div class="row-two">
+            <div class="row-item">
+                <img src="../img/simplelogo4.webp" alt="" srcset="">
+                <div class="row-img-text">
+                    <h4>Iasi</h4>
+                    <h5>7 hour drive</h5>
+                </div>
+            </div>
+            <div class="row-item">
+                <img src="../img/simplelogo3.webp" alt="" srcset="">
+                <div class="row-img-text">
+                    <h4>Oradea</h4>
+                    <h5>7 hour drive</h5>
+                </div>
+            </div>
+            <div class="row-item">
+                <img src="../img/simplelogo2.webp" alt="" srcset="">
+                <div class="row-img-text">
+                    <h4>Timisoara</h4>
+                    <h5>7 hour drive</h5>
+                </div>
+            </div>
+            <div class="row-item">
+                <img src="../img/simplelogo.webp" alt="" srcset="">
+                <div class="row-img-text">
+                    <h4>Constanta</h4>
+                    <h5>7 hour drive</h5>
+                </div>
+            </div>
+        </div>
+
+
+        
     </div>
 </body>
 </html>
