--- a/src/html/index.html
+++ b/src/html/index.html
@@ -58,28 +58,28 @@
     <div class="section-2">
         <div class="row-first">
             <div class="row-item">
-                <img src="../img/simplelogo.webp" alt="" srcset="">
+                <img src="../img/city-icons/simplelogo.webp" alt="" srcset="">
                 <div class="row-img-text">
                     <h4>Sibiu</h4>
                     <h5>7 hour drive</h5>
                 </div>
             </div>
             <div class="row-item">
-                <img src="../img/simplelogo2.webp" alt="" srcset="">
+                <img src="../img/city-icons/simplelogo2.webp" alt="" srcset="">
                 <div class="row-img-text">
                     <h4>Bistrita</h4>
                     <h5>7 hour drive</h5>
                 </div>
             </div>
             <div class="row-item">
-                <img src="../img/simplelogo3.webp" alt="" srcset="">
+                <img src="../img/city-icons/simplelogo3.webp" alt="" srcset="">
                 <div class="row-img-text">
                     <h4>Bucuresti</h4>
                     <h5>7 hour drive</h5>
                 </div>
             </div>
             <div class="row-item">
-                <img src="../img/simplelogo4.webp" alt="" srcset="">
+                <img src="../img/city-icons/simplelogo4.webp" alt="" srcset="">
                 <div class="row-img-text">
                     <h4>Prahova</h4>
                     <h5>7 hour drive</h5>
@@ -88,36 +88,57 @@
         </div>
         <div class="row-two">
             <div class="row-item">
-                <img src="../img/simplelogo4.webp" alt="" srcset="">
+                <img src="../img/city-icons/simplelogo4.webp" alt="" srcset="">
                 <div class="row-img-text">
                     <h4>Iasi</h4>
                     <h5>7 hour drive</h5>
                 </div>
             </div>
             <div class="row-item">
-                <img src="../img/simplelogo3.webp" alt="" srcset="">
+                <img src="../img/city-icons/simplelogo3.webp" alt="" srcset="">
                 <div class="row-img-text">
                     <h4>Oradea</h4>
                     <h5>7 hour drive</h5>
                 </div>
             </div>
             <div class="row-item">
-                <img src="../img/simplelogo2.webp" alt="" srcset="">
+                <img src="../img/city-icons/simplelogo2.webp" alt="" srcset="">
                 <div class="row-img-text">
                     <h4>Timisoara</h4>
                     <h5>7 hour drive</h5>
                 </div>
             </div>
             <div class="row-item">
-                <img src="../img/simplelogo.webp" alt="" srcset="">
+                <img src="../img/city-icons/simplelogo.webp" alt="" srcset="">
                 <div class="row-img-text">
                     <h4>Constanta</h4>
                     <h5>7 hour drive</h5>
                 </div>
             </div>
+            
         </div>
 
-
+            <div class="accomodations">
+                <h1>Live anywhere</h1>
+                <div class="house-pictures">
+                    <div class="house-item">
+                        <img src="../img/house-icons/house1.webp" alt="">
+                        <h3>Entire homes</h3>
+                    </div>
+                    <div class="house-item">
+                        <img src="../img/house-icons/house2.webp" alt="">
+                        <h3>Cottages and cabins</h3>
+                    </div>
+                    <div class="house-item">
+                        <img src="../img/house-icons/house3.webp" alt="">
+                        <h3>Unique stays</h3>
+                    </div>
+                    <div class="house-item">
+                        <img src="../img/house-icons/house4.webp" alt="">
+                        <h3>Pets welcome</h3>
+                    </div>
+                </div>
+            </div>
         
     </div>
 </body>
