Added and finished section 3

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,6 +3,7 @@
 <head>
     <script src="https://kit.fontawesome.com/2d2949535e.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
+    <link rel="icon" href="../img/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Airbnb Clone</title>
     <link rel="stylesheet" type="text/css" href="../styles/style.css">
@@ -60,59 +61,59 @@
             <div class="row-item">
                 <img src="../img/city-icons/simplelogo.webp" alt="" srcset="">
                 <div class="row-img-text">
-                    <h4>Sibiu</h4>
-                    <h5>7 hour drive</h5>
+                    <h4>Iasi</h4>
+                    <h5>7.5 hour drive</h5>
                 </div>
             </div>
             <div class="row-item">
                 <img src="../img/city-icons/simplelogo2.webp" alt="" srcset="">
                 <div class="row-img-text">
-                    <h4>Bistrita</h4>
-                    <h5>7 hour drive</h5>
+                    <h4>Bucharest</h4>
+                    <h5>3 hour drive</h5>
                 </div>
             </div>
             <div class="row-item">
                 <img src="../img/city-icons/simplelogo3.webp" alt="" srcset="">
                 <div class="row-img-text">
-                    <h4>Bucuresti</h4>
-                    <h5>7 hour drive</h5>
+                    <h4>Sibiu&nbsp;&nbsp;</h4>
+                    <h5>8 hour drive</h5>
                 </div>
             </div>
             <div class="row-item">
                 <img src="../img/city-icons/simplelogo4.webp" alt="" srcset="">
                 <div class="row-img-text">
-                    <h4>Prahova</h4>
-                    <h5>7 hour drive</h5>
+                    <h4>Arad&nbsp;&nbsp;</h4>
+                    <h5>2 hour drive</h5>
                 </div>
             </div>
         </div>
         <div class="row-two">
             <div class="row-item">
-                <img src="../img/city-icons/simplelogo4.webp" alt="" srcset="">
+                <img src="../img/city-icons/simplelogo5.webp" alt="" srcset="">
                 <div class="row-img-text">
-                    <h4>Iasi</h4>
-                    <h5>7 hour drive</h5>
+                    <h4>Cluj</h4>
+                    <h5>4.5 hour drive</h5>
                 </div>
             </div>
             <div class="row-item">
-                <img src="../img/city-icons/simplelogo3.webp" alt="" srcset="">
-                <div class="row-img-text">
-                    <h4>Oradea</h4>
-                    <h5>7 hour drive</h5>
-                </div>
-            </div>
-            <div class="row-item">
-                <img src="../img/city-icons/simplelogo2.webp" alt="" srcset="">
+                <img src="../img/city-icons/simplelogo6.webp" alt="" srcset="">
                 <div class="row-img-text">
                     <h4>Timisoara</h4>
+                    <h5>1 hour drive</h5>
+                </div>
+            </div>
+            <div class="row-item">
+                <img src="../img/city-icons/simplelogo7.webp" alt="" srcset="">
+                <div class="row-img-text">
+                    <h4>Craiova</h4>
                     <h5>7 hour drive</h5>
                 </div>
             </div>
             <div class="row-item">
-                <img src="../img/city-icons/simplelogo.webp" alt="" srcset="">
+                <img src="../img/city-icons/simplelogo8.webp" alt="" srcset="">
                 <div class="row-img-text">
-                    <h4>Constanta</h4>
-                    <h5>7 hour drive</h5>
+                    <h4>Mamaia</h4>
+                    <h5>3 hour drive</h5>
                 </div>
             </div>
             
@@ -139,7 +140,35 @@
                     </div>
                 </div>
             </div>
-        
+    </div>
+
+    <div class="section-3">
+        <div class="flex-showcase">
+            <div class="flex-item-1">
+                <h1>Experience the world</h1>
+                <h4>Unique activities with local experts - in person or online</h3>
+            </div>
+
+            <div class="flex-item-2">
+                <div class="flex-item-picture">
+                    <img src="../img/experience-pictures/picture1.webp" alt="" srcset="">
+                    <h2>Online experiences</h2>
+                    <h4>Travel the world without leaving home</h4>
+                </div>
+
+                <div class="flex-item-picture">
+                    <img src="../img/experience-pictures/picture2.webp" alt="" srcset="">
+                    <h2>Experiences</h2>
+                    <h4>Things to do wherever you are</h4>
+                </div>
+
+                <div class="flex-item-picture">
+                    <img src="../img/experience-pictures/picture3.webp" alt="" srcset="">
+                    <h2>Adventures</h2>
+                    <h4>Multi-day trips with meals and stays</h4>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
