added sliding down animation

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -52,7 +52,7 @@
         <div class="intro">
             <h1>Go</h1>
             <h1 id="last-child-h1">Near</h1>
-            <h5>Explore nearby stays</h5>
+            <h5 onclick="scrolldown()">Explore nearby stays</h5>
         </div>
     </div>
 
@@ -170,5 +170,15 @@
             </div>
         </div>
     </div>
+
+    <footer>
+        <div class="footer-flex-1">
+
+        </div>
+        <div class="footer-flex-2">
+            
+        </div>
+    </footer>
+
 </body>
 </html>
