--- a/src/html/index.html
+++ b/src/html/index.html
@@ -173,10 +173,21 @@
 
     <footer>
         <div class="footer-flex-1">
-
+            <div class="sub-flex-1">
+                <h5>&copy; 2021 AIrbnb, Inc. All rights reserved</h5>
+                <a href="#">Privacy</a>
+                <a href="#">Terms</a>
+                <a href="#">Sitemap</a>
+            </div>
         </div>
         <div class="footer-flex-2">
-            
+            <div class="sub-flex-2">
+                <i class="fas fa-globe">&nbsp;<span class="english"><a href="#">English (US)</a></span></i>
+                <a href="#">lei &nbsp;<span class="ron">RON</span></a>
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-instagram"></i>
+            </div>
         </div>
     </footer>
 
