--- a/src/html/index.html
+++ b/src/html/index.html
@@ -171,25 +171,50 @@
         </div>
     </div>
 
-    <footer>
-        <div class="footer-flex-1">
-            <div class="sub-flex-1">
-                <h5>&copy; 2021 AIrbnb, Inc. All rights reserved</h5>
-                <a href="#">Privacy</a>
-                <a href="#">Terms</a>
-                <a href="#">Sitemap</a>
+    <div class="section-4">
+        <div class="flex-showcase">
+            <div class="flex-item-1">
+                <h1>Join millions of hosts on Airbnb</h1>
             </div>
+
+            <div class="flex-item-2">
+                <div class="flex-item-picture">
+                    <img src="../img/experience-pictures/picture4.webp" alt="" srcset="">
+                    <h2>Host your home</h2>
+                </div>
+
+                <div class="flex-item-picture">
+                    <img src="../img/experience-pictures/picture5.webp" alt="" srcset="">
+                    <h2>Host an online experience</h2>
+                </div>
+
+                <div class="flex-item-picture">
+                    <img src="../img/experience-pictures/picture6.webp" alt="" srcset="">
+                    <h2>Host an experience</h2>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <div class="footer">
+        <div class="footer-flex-1">
+            <p>&copy; 2021 Airbnb, Inc. All rights reserved</p>
+            <a href="#">Privacy</a>
+            <a href="#">Terms</a>
+            <a href="#">Sitemap</a>
         </div>
         <div class="footer-flex-2">
-            <div class="sub-flex-2">
-                <i class="fas fa-globe">&nbsp;<span class="english"><a href="#">English (US)</a></span></i>
-                <a href="#">lei &nbsp;<span class="ron">RON</span></a>
-                <i class="fab fa-facebook-f"></i>
-                <i class="fab fa-twitter"></i>
-                <i class="fab fa-instagram"></i>
+            <div class="footer-margin-right">
+                <i class="fas fa-globe"><span class="underline"><a href="#"> English &nbsp;(US)</a></span></i>
+                <a href="#" class="ron">lei <span class="underline">RON</span></a>
             </div>
-        </div>
-    </footer>
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
 
+        </div>
+    </div>
 </body>
 </html>
